docs/api/qiskit/0.24/qiskit.chemistry.drivers.BosonicDriver.mdx
---
title: BosonicDriver
description: API reference for qiskit.chemistry.drivers.BosonicDriver
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.drivers.BosonicDriver
---

<span id="qiskit-chemistry-drivers-bosonicdriver" />

# qiskit.chemistry.drivers.BosonicDriver

<Class id="qiskit.chemistry.drivers.BosonicDriver" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/chemistry/drivers/bosonic_driver.py" signature="BosonicDriver(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)">
  Base class for Qiskit’s chemistry bosonic drivers.

  **Parameters**

  *   **molecule** (`Optional`\[`Molecule`]) – molecule
  *   **basis** (`str`) – basis set
  *   **hf\_method** (`str`) – Hartree-Fock Method type
  *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

  **Raises**

  [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.drivers.BosonicDriver.__init__" name="__init__" signature="abstract __init__(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)">
    **Parameters**

    *   **molecule** (`Optional`\[`Molecule`]) – molecule
    *   **basis** (`str`) – basis set
    *   **hf\_method** (`str`) – Hartree-Fock Method type
    *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

    **Raises**

    [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.
  </Function>

  ## Methods

  |                                                                                                                                                     |                                                    |
  | --------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------- |
  | [`__init__`](#qiskit.chemistry.drivers.BosonicDriver.__init__ "qiskit.chemistry.drivers.BosonicDriver.__init__")(\[molecule, basis, hf\_method, …]) | **type molecule**`Optional`\[`Molecule`]           |
  | [`run`](#qiskit.chemistry.drivers.BosonicDriver.run "qiskit.chemistry.drivers.BosonicDriver.run")()                                                 | Runs driver to produce a WatsonHamiltonian output. |

  ## Attributes

  |                                                                                                                                             |                                                 |
  | ------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
  | [`basis`](#qiskit.chemistry.drivers.BosonicDriver.basis "qiskit.chemistry.drivers.BosonicDriver.basis")                                     | return basis                                    |
  | [`hf_method`](#qiskit.chemistry.drivers.BosonicDriver.hf_method "qiskit.chemistry.drivers.BosonicDriver.hf_method")                         | return Hartree-Fock method                      |
  | [`molecule`](#qiskit.chemistry.drivers.BosonicDriver.molecule "qiskit.chemistry.drivers.BosonicDriver.molecule")                            | return molecule                                 |
  | [`supports_molecule`](#qiskit.chemistry.drivers.BosonicDriver.supports_molecule "qiskit.chemistry.drivers.BosonicDriver.supports_molecule") | True for derived classes that support Molecule. |

  ### basis

  <Function id="qiskit.chemistry.drivers.BosonicDriver.basis" name="basis" signature="property basis">
    return basis

    **Return type**

    `str`
  </Function>

  ### hf\_method

  <Function id="qiskit.chemistry.drivers.BosonicDriver.hf_method" name="hf_method" signature="property hf_method">
    return Hartree-Fock method

    **Return type**

    `str`
  </Function>

  ### molecule

  <Function id="qiskit.chemistry.drivers.BosonicDriver.molecule" name="molecule" signature="property molecule">
    return molecule

    **Return type**

    `Optional`\[`Molecule`]
  </Function>

  ### run

  <Function id="qiskit.chemistry.drivers.BosonicDriver.run" name="run" signature="abstract run()">
    Runs driver to produce a WatsonHamiltonian output.

    **Return type**

    `WatsonHamiltonian`

    **Returns**

    A WatsonHamiltonian comprising the bosonic data.
  </Function>

  ### supports\_molecule

  <Function id="qiskit.chemistry.drivers.BosonicDriver.supports_molecule" name="supports_molecule" signature="property supports_molecule">
    True for derived classes that support Molecule.

    **Return type**

    `bool`

    **Returns**

    True if Molecule is supported.
  </Function>
</Class>

